Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/OverrideChecks/6199153/T6199153.out
T6199153.java:18:21: compiler.warn.override.unchecked.thrown: (compiler.misc.cant.override: m(), T6199153.B, <T>m(), T6199153.A), java.io.IOException
- compiler.err.warnings.and.werror
1 error
1 warning
